// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatFile should format complex nested structures 1`] = `
"import { NgModule } from '@angular/core';
import { RouterModule } from '@angular/router';

@NgModule({
  imports: [
    RouterModule.forRoot([
      { path: '', component: HomeComponent },
      { path: 'about', component: AboutComponent }
    ])
  ],
  exports: [RouterModule]
})
export class AppRoutingModule { }
"
`;

exports[`formatFile should organize imports alphabetically 1`] = `
"import { inject } from '@angular/core';
import { Router } from '@angular/router';
import { a, m, z } from './test-module';

export class TestClass {
  z = z;
  a = a;
  m = m;

  router = inject(Router);
}
"
`;

exports[`formatFile should remove unused imports 1`] = `
"import { Component } from '@angular/core';
import { Router } from '@angular/router';

@Component({
  selector: 'app-test'
})
export class TestClass {
  router = inject(Router);
}
"
`;

exports[`formatFile should use 2 space indentation 1`] = `
"import { Component } from '@angular/core';

@Component({
  selector: 'app-test',
  template: ''
})
export class TestClass {
  constructor() {
    console.log('test');
  }
}
"
`;
